--- a/templates/confirmar_cita.html
+++ b/templates/confirmar_cita.html
@@ -68,29 +68,46 @@
 
 
                             <div class="row g-3">
+                                {% if info_cliente %}
+                                    <div class="col-md-6">
+                                    <label for="nombre_cliente" class="form-label">Nombre de cliente:</label>
+                                    <input  type="text" class="form-control" id="nombre_cliente" name="nombre_cliente"
+                                           value="{{ info_cliente['nombre'] }} {{ info_cliente['apellido_paterno'] }} {{ info_cliente['apellido_materno'] }}" readonly>
+                                    <div class="invalid-feedback">
+                                        Ingrese una fecha
+                                    </div>
+                                </div>
+                                    <div class="col-md-6">
+                                    <label for="correo" class="form-label">Correo de cliente:</label>
+                                    <input  type="text" class="form-control" id="correo" name="correo_cliente"
+                                           value="{{ info_cliente['correo'] }}" readonly>
+                                    <div class="invalid-feedback">
+                                        Ingrese una fecha
+                                    </div>
+                                </div>
+                                {% endif %}
 
-
-                                <div class="col-md-3">
+                                <div class="col-md-6">
                                     <label for="fecha" class="form-label">Fecha:</label>
-                                    <input style="all:unset;" type="text" id="fecha" name="fecha"
-                                           value="{{ info_cita['fecha'] }}" >
+                                    <input  type="text" class="form-control" id="fecha" name="fecha"
+                                           value="{{ info_cita['fecha'] }}" readonly>
                                     <div class="invalid-feedback">
                                         Ingrese una fecha
                                     </div>
                                 </div>
 
-                                <div class="col-md-3">
+                                <div class="col-md-6">
                                     <label for="hora" class="form-label">Hora (24h):</label>
-                                    <input type="text" style="all:unset;" id="hora" name="hora"
-                                           value="{{ info_cita['hora'] }}">
+                                    <input type="text" class="form-control" id="hora" name="hora"
+                                           value="{{ info_cita['hora'] }}" readonly>
                                     <div class="invalid-feedback">
                                         hora requerida.
                                     </div>
                                 </div>
-                                <div style="display: flex; justify-content: flex-start">
-                                    <div class="col-md-3">
-                                        <label class="form-label">Sucursal:</label>
-                                        <label class="form-label">{{ info_cita['info_sucursal']['nombre'] }}</label>
+
+                                    <div class="col-md-5">
+                                        <label id="sucursal" class="form-label">Sucursal:</label>
+                                        <input class="form-control" value="{{ info_cita['info_sucursal']['nombre'] }}" id="sucursal" readonly>
 
                                         <div class="invalid-feedback">
                                             hora requerida.
@@ -99,33 +116,74 @@
                                                value="{{ info_cita['info_sucursal']['id_sucursal'] }}"
                                                >
                                     </div>
-                                    <div class="col-md-3">
-                                        <label for="hora" class="form-label">Dirección:</label>
-                                        <label style="width: 20rem"
-                                               class="form-label">{{ info_cita['info_sucursal']['direccion'] }}</label>
-                                        <div class="invalid-feedback">
-                                            hora requerida.
-                                        </div>
+                                    <div class="col-md-7">
+                                        <label for="direccion" class="form-label">Dirección:</label>
+                                        <input class="form-control" value="{{ info_cita['info_sucursal']['direccion'] }}" id="direccion" readonly>
+
                                     </div>
-                                </div>
 
-                                <div style="display: flex; flex-direction: column; justify-content: flex-start; border-bottom-style: solid; border-bottom-width:1px ">
-                                    <label for="" class="form-label">Servicios:</label>
-                                    {% for servicio in info_cita['lista_servicios'] %}
-                                        <div style="display: flex; justify-content: space-between">
-                                            <label class="form-label">{{ servicio['nombre'] }}</label>
-                                            <label class="form-label">{{ servicio['descripcion'] }}</label>
-                                            <label class="form-label">${{ servicio['precio'] }}</label>
-                                        </div>
-                                    {% endfor %}
+<h4 class="border-bottom pb-2 mb-0">Servicios a realizar</h4>
+                    <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Descripción</th>
+
+                        <th scope="col">Precio</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for servicio in info_cita['lista_servicios'] %}
+                     <tr>
+                        <th scope="row">{{ servicio['nombre'] }}</th>
+                        <td>{{ servicio['descripcion'] }}</td>
+
+                        <td>${{ servicio['precio'] }}</td>
+                    </tr>
+
+                {% endfor %}
+
+                </tbody>
+
+            </table>
+
+                            <div class="col-md-4">
+                                    <label for="subtotal" class="form-label">Subtotal:</label>
+                                    <input type="number" class="form-control" id="subtotal" name="monto"
+                                           value="{{ info_cita['monto'] }}" readonly>
 
                                 </div>
-                                <div style="display: flex; justify-content: space-between; padding-bottom: 2rem">
+                            <div class="col-md-4">
+                                    <label for="iva" class="form-label">IVA:</label>
+                                    <input type="number" class="form-control" id="iva"
+                                           value="{{ info_cita['monto']*0.16 }}" readonly>
+
+                                </div>
+                            <div class="col-md-4">
                                     <label for="total" class="form-label">Total:</label>
-                                    <label for="total" class="form-label">${{ info_cita['monto'] }}</label>
-                                    <input type="text" style="display: none" name="monto"
-                                           value="{{ info_cita['monto'] }}">
+                                    <input type="number" class="form-control" id="total"
+                                           value="{{ (info_cita['monto']*0.16)+info_cita['monto'] }}" readonly>
+
                                 </div>
+
+
+{#                                <div style="display: flex; flex-direction: column; justify-content: flex-start; border-bottom-style: solid; border-bottom-width:1px ">#}
+{#                                    <label for="" class="form-label">Servicios:</label>#}
+{#                                    {% for servicio in info_cita['lista_servicios'] %}#}
+{#                                        <div style="display: flex; justify-content: space-between">#}
+{#                                            <label class="form-label">{{ servicio['nombre'] }}</label>#}
+{#                                            <label class="form-label">{{ servicio['descripcion'] }}</label>#}
+{#                                            <label class="form-label">${{ servicio['precio'] }}</label>#}
+{#                                        </div>#}
+{#                                    {% endfor %}#}
+{##}
+{#                                </div>#}
+{#                                <div style="display: flex; justify-content: space-between; padding-bottom: 2rem">#}
+{#                                    <label for="total" class="form-label">Total:</label>#}
+{#                                    <label for="total" class="form-label">${{ info_cita['monto'] }}</label>#}
+{#                                    <input type="text" style="display: none" name="monto"#}
+{#                                           value="{{ info_cita['monto'] }}">#}
+{#                                </div>#}
 
 
                             </div>
@@ -135,12 +193,12 @@
 
                     </div>
                 </main>
-                <div class="container">
+                <div class="container" style="padding-top: 3%">
                     <main>
                         <div class="row g-5 center">
                             <div class="col-md-7 col-lg-8">
                                 {#              SE PUEDE MODIFICAR PERO SOLO A TRAVES DE CLASES (class="..."), NO CAMBIAR TIPO DE ETIQUETA (<button></button>) O EL ATRIBUTO "type" PORFAVOR #}
-                     <button class="w-100 btn btn-primary btn-lg" type="submit">Agendar Cita</button>
+                     <button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>
 
 {#                                 <p align="right"><a class="btn btn-lg btn-primary" href="/inicio">Agendar cita</a></p>#}
 
