--- a/templates/consultar_citas_gerente_recepcionista.html
+++ b/templates/consultar_citas_gerente_recepcionista.html
@@ -23,10 +23,12 @@
 
 
         <div class="my-3 p-3 bg-body rounded shadow-sm">
-            <h6 class="border-bottom pb-2 mb-0">Citas realizadas</h6>
+            <h6 class="border-bottom pb-2 mb-0">Citas</h6>
+<div class="col-auto mb-3 ">
+                <input class="form-control" type="text" id="searchbox" onkeyup="buscar( 'searchbox', 'citas') " placeholder="Buscar cita... ">
+            </div>
 
-
-            <table class="table table-striped table-hover">
+            <table id="citas" class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th scope="col">Usuario</th>
@@ -40,7 +42,7 @@
                 <tbody>
                 {% for cita in citas %}
                      <tr>
-                        <th scope="row">{{ cita['nombre_completo'] }}</th>
+                        <td scope="row">{{ cita['nombre_completo'] }}</td>
                         <td>{{ cita['fecha'] }}</td>
                         <td>{{ cita['hora'] }}</td>
                         <td>${{ cita['monto'] }}</td>
