--- a/templates/consultar_clientes.html
+++ b/templates/consultar_clientes.html
@@ -25,9 +25,11 @@
         <div class="my-3 p-3 bg-body rounded shadow-sm">
         <h5>{{ get_flashed_messages()[0] }}</h5>
             <h6 class="border-bottom pb-2 mb-0">Clientes</h6>
+<div class="col-auto mb-3 ">
+                <input class="form-control" type="text" id="searchbox" onkeyup="buscarCliente( 'searchbox', 'clientes') " placeholder="Buscar cliente... ">
+            </div>
 
-
-            <table class="table table-striped table-hover">
+            <table id="clientes" class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th scope="col">Nombre</th>
@@ -40,7 +42,7 @@
                 <tbody>
                 {% for cliente in lista_clientes %}
                      <tr>
-                        <th scope="row">{{ cliente['nombre'] }}</th>
+                        <td scope="row">{{ cliente['nombre'] }} {{ cliente['apellido_paterno'] }} {{ cliente['apellido_materno'] }}</td>
                         <td>{{ cliente['correo'] }}</td>
                         <td>{{ cliente['telefono'] }}</td>
                         <td><a href="/escoger_cita/{{ cliente['id_usuario'] }}" class="btn btn-primary btn-sm" >Agendar</a></td>
@@ -62,11 +64,45 @@
 
     </main>
 
-    <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
 
-    <script src="offcanvas.js"></script>
+
+
+    <script>
+        function buscarCliente(id, table_id) {
+    // Declare variables
+    var input, filter, table, tr, td, i, txtValue, j, count, tamanio;
+    input = document.getElementById(id);
+    filter = input.value.toLowerCase();
+    table = document.getElementById(table_id);
+    tr = table.getElementsByTagName("tr");
+    // Loop through all table rows, and hide those who don't match the search query
+    for (i = 0; i < tr.length; i++) {
+        count = 0;
+        tamanio = tr[i].getElementsByTagName("td").length - 2;
+        for (j = 0; j < tamanio; j++) {
+            td = tr[i].getElementsByTagName("td")[j];
+
+            if (td) {
+                txtValue = td.textContent.toLowerCase() || td.innerText.toLowerCase();
+                if (txtValue.toLowerCase().indexOf(filter) > -1) {
+                    // tr[i].style.display = "";
+                } else {
+                    count++;
+                    // tr[i].style.display = "none";
+
+                }
+
+            }
+
+        }
+        if (count === tamanio) {
+            tr[i].style.display = "none";
+        } else {
+            tr[i].style.display = "";
+        }
+    }
+}
+    </script>
 </body>
 
 </html>
