--- a/templates/info_cita_gerente_recepcionista.html
+++ b/templates/info_cita_gerente_recepcionista.html
@@ -21,7 +21,7 @@
 
 
         <div class="col-md-7 col-lg-8" style="margin-top: 10%">
-            <form class="needs-validation" novalidate>
+            <form class="needs-validation" method="POST" novalidate>
                 <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
 
                     <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm" style="background-color:  #7CB8EB">
@@ -33,21 +33,23 @@
                         </div>
                     </div>
 
+                                        <input style="display: none" type="text" class="form-control" id="id_cita" name="id_cita"  value="{{ dicc_cita['id_cita'] }}" readonly>
+
 
                     <div class="col-md-6">
                         <label for="nombre_cliente" class="form-label">Nombre de cliente</label>
-                        <input type="text" class="form-control" id="nombre_cliente" name="nombre_completo_cliente" value="{{ dicc_cita['nombre_cliente'] }} {{ dicc_cita['apellido1_cliente'] }} {{ dicc_cita['apellido2_cliente'] }}" readonly>
+                        <input type="text" class="form-control" id="nombre_cliente"  value="{{ dicc_cita['nombre_cliente'] }} {{ dicc_cita['apellido1_cliente'] }} {{ dicc_cita['apellido2_cliente'] }}" readonly>
                     </div>
 
                     <div class="col-md-6">
                         <label for="correo" class="form-label">Nombre de cliente</label>
-                        <input type="text" class="form-control" id="corre" name="correo" value="{{ dicc_cita['correo'] }}" readonly>
+                        <input type="text" class="form-control" id="corre" value="{{ dicc_cita['correo'] }}" readonly>
                     </div>
 
 
                     <div class="col-md-4">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input  type="text" class="form-control" id="fecha" name="fecha" value="{{ dicc_cita['fecha'] }}"
+                        <input  type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}"
                             readonly>
                         <div class="invalid-feedback">
                             Ingrese una fecha
@@ -56,7 +58,7 @@
 
                     <div class="col-md-4">
                         <label for="hora" class="form-label">Hora (24h)</label>
-                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['hora'] }}"
+                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['hora'] }}"
                             readonly>
                         <div class="invalid-feedback">
                             hora requerida.
@@ -64,7 +66,7 @@
                     </div>
                     <div class="col-md-4">
                         <label for="hora" class="form-label">Hora de termino(24h)</label>
-                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['hora_fin'] }}"
+                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['hora_fin'] }}"
                             readonly>
                         <div class="invalid-feedback">
                             hora requerida.
@@ -72,7 +74,7 @@
                     </div>
                 <div class="col-md-6">
                         <label for="hora" class="form-label">Nombre de sucursal</label>
-                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['nombre_sucursal'] }}"
+                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['nombre_sucursal'] }}"
                             readonly>
                         <div class="invalid-feedback">
                             hora requerida.
@@ -80,7 +82,7 @@
                     </div>
                 <div class="col-md-6">
                         <label for="hora" class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['direccion_sucursal'] }}"
+                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['direccion_sucursal'] }}"
                             readonly>
                         <div class="invalid-feedback">
                             hora requerida.
@@ -114,7 +116,7 @@
             </table>
                     <div class="col-md-4">
                         <label for="subtotal" class="form-label">Subtotal</label>
-                        <input type="number" class="form-control" id="subtotal" name="monto" value="{{ dicc_cita['monto'] }}"
+                        <input type="number" class="form-control" id="subtotal"  value="{{ dicc_cita['monto'] }}"
                             readonly>
                         <div class="invalid-feedback">
 
@@ -122,7 +124,7 @@
                     </div>
                 <div class="col-md-4">
                         <label for="iva" class="form-label">IVA</label>
-                        <input type="number" class="form-control" id="iva" name="iva" value="{{ dicc_cita['iva'] }}"
+                        <input type="number" class="form-control" id="iva" value="{{ dicc_cita['iva'] }}"
                             readonly>
                         <div class="invalid-feedback">
 
@@ -130,7 +132,7 @@
                     </div>
                 <div class="col-md-4">
                         <label for="total" class="form-label">Total a pagar</label>
-                        <input type="number" class="form-control" id="total" name="total" value="{{ dicc_cita['total'] }}"
+                        <input type="number" class="form-control" id="total" value="{{ dicc_cita['total'] }}"
                             readonly>
                         <div class="invalid-feedback">
                             hora requerida.
