--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,19 +18,19 @@
             <h1>Registrarse</h1>
             <form method="post">
                 <div class="txt_field">
-                    <input type="text" required></input>
+                    <input type="text" name="nombre" required></input>
                     <span></span>
                     <label>Nombre</label>
                 </div>
     
                 <div class="txt_field">
-                    <input type="email" required></input>
+                    <input type="email" name="correo" required></input>
                     <span></span>
                     <label>Email</label>
                 </div>
     
                 <div class="txt_field">
-                    <input input type="tel" name="telephone" pattern="\([0-9]{3}\) [0-9]{3}[ -][0-9]{4}"
+                    <input input type="tel" name="telefono" <!--pattern="\([0-9]{3}\) [0-9]{3}[ -][0-9]{4}"-->
                         title="A valid telephone number consist of a 3 digits code area between brackets, a space, the three first digits of the number, a space or hypen (-), and four more digits"
                         required></input>
                     <span></span>
@@ -38,13 +38,13 @@
                 </div>
     
                 <div class="txt_field">
-                    <input type="password" required></input>
+                    <input type="password" name="password" required></input>
                     <span></span>
                     <label>Contraseña</label>
                 </div>
     
                 <div class="txt_field">
-                    <input type="password" required></input>
+                    <input type="password" name="password" required></input>
                     <span></span>
                     <label>Repetir contraseña</label>
                 </div>
