--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,39 +1,178 @@
-html,
-body {
-  height: 100%;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat';
+    color: #666666;
+    
+   
 }
 
-.form-signin {
-    padding: 10px;
-}
-
-body {
+body{
     display: flex;
-    align-items: center;
-    background-color: #f5f5f5;
+    height: 100vh;
     justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background: linear-gradient(135deg, rgba(203,229,247,1) 35%, rgba(91,154,209,1) 100%);
 }
 
-
-.form-signin .form-floating:focus-within {
-    z-index: 2;
+.container{
+    max-width: 700px;
+    width: 100%;
+    background: #fff;
+    padding: 25px 30px;
+    border-radius: 10px;
+    
 }
 
-element.style {
-    max-width: 686px;
-    width: 800%;
+.container .title{
+    font-size: 25px;
+    font-weight: 600;
+    position: relative;
+    color: black;
+    
+    
 }
 
-.position-btn{
-    width: 17%;
+.container .title::before{
+    content: '';
     position: absolute;
-    right: 2%;
-    top: 82%;
+    left: 0;
+    bottom: 0;
+    top: 35px;
+    height: 3px;
+    width: 30px;
+    background: linear-gradient(135deg, rgba(203,229,247,1) 35%, rgba(91,154,209,1) 100%);
 }
 
-.position-png{
-    width: 27%;
-    position: absolute;
-    top: 35%;
-    left: 5%;
+.container form .user-details{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px 0 12px 0;
+    
+}
+
+form .user-details .input-box{
+    margin-bottom: 15px;
+    width: calc(100% / 2 - 20px);
+    
+}
+
+form .user-details .input-box-1{
+    margin-bottom: 15px;
+    width: 100%;
+    
+}
+.user-details .input-box-1 .details{
+    display: block;
+    font-weight: 500;
+    margin-bottom: 5px;
+    
+}
+
+
+
+.user-details .input-box .details{
+    display: block;
+    font-weight: 500;
+    margin-bottom: 5px;
+    
+}
+
+.user-details .input-box-1 input{
+    height: 45px;
+    width: 100%;
+    outline: none;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    padding-left: 15px;
+    font-size: 16px;
+    border-bottom-width: 2px;
+    transition: all 0.4s ease;
+    
+}
+
+.user-details .input-box input{
+    height: 45px;
+    width: 100%;
+    outline: none;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    padding-left: 15px;
+    font-size: 16px;
+    border-bottom-width: 2px;
+    transition: all 0.4s ease;
+    
+}
+
+.user-details .input-box-1 input:focus,
+.user-details .input-box-1 input:valid{
+    border-color:  rgba(91,154,209,1);
+}
+
+
+.user-details .input-box input:focus,
+.user-details .input-box input:valid{
+    border-color:  rgba(91,154,209,1);
+}
+
+form .button{
+    height: 45px;
+    margin: 45px 0;
+}
+
+form .button input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    color: #fff;
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 10px;
+    letter-spacing: 1px;
+    background: linear-gradient(135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
+}
+
+form .button input:hover{
+    background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
+}
+
+.login_link{
+    margin: 15px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+}
+
+.login_link a{
+    color: #2691d9;
+    text-decoration: none;
+}
+
+.login_link a:hover{
+    text-decoration: underline;
+}
+
+@media (max-width: 584px){
+    .container{
+        max-width: 100%;
+    }
+
+    form .user-details .input-box{
+        margin-bottom: 15px;
+        width: 100%;
+    }
+
+    .container form .user-details{
+        max-height: 300px;
+        overflow-y: scroll;
+    }
+
+    .user-details::-webkit-scrollbar{
+        width: 0;
+    }
+
 }
