--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,12 +25,12 @@
 
                 <div class="input-box">
                     <span class="details">Apellido materno</span>
-                    <input type="text" class="" placeholder="Apellido paterno" required>
+                    <input type="text" class="" placeholder="Ingresa tu apellido paterno" required>
                 </div>
 
                 <div class="input-box">
                     <span class="details">Apellido paterno</span>
-                    <input type="text" class="" placeholder="Apellido materno" required>
+                    <input type="text" class="" placeholder="Ingresa tu apellido materno" required>
                 </div>
 
                 <div class="input-box">
