Implementacion de modificar cita

--- a/templates/consultar_citas.html
+++ b/templates/consultar_citas.html
@@ -40,7 +40,7 @@
 
           <div class="btn-group" role="group" aria-label="Basic outlined example">
             <a type="button" class="btn btn-outline-primary" href="/informacion_cita/{{ cita['id_cita'] }}">Ver cita</a>
-            <a type="button" class="btn btn-outline-primary" href="/fecha_cita">Cambiar cita</a>
+            <a type="button" class="btn btn-outline-primary" href="/modificar_cita/{{ cita['id_cita'] }}">Cambiar cita</a>
           </div>
         </p>
 
