--- a/templates/informacion_cita.html
+++ b/templates/informacion_cita.html
@@ -216,7 +216,7 @@
                     <hr>
                 <div style="display: flex; justify-content: space-between; padding-bottom: 3rem" >
                     <a class="btn btn-lg btn-primary" href="/consultar_citas">Todas las citas</a>
-                    <button class="btn btn-lg btn-primary" type="submit">Editar cita</button>
+                    <a class="btn btn-lg btn-primary" href="/modificar_cita/{{ dicc_cita['id_cita'] }}">Editar cita</a>
                 </div>
 
 
