Correcion error al modificar una cita

--- a/templates/consultar_citas.html
+++ b/templates/consultar_citas.html
@@ -49,7 +49,7 @@
         {% endfor %}
 
       <small class="d-block text-end mt-3">
-        <a href="/fecha_cita">Agendar cita nueva</a>
+        <a href="/escoger_cita/" class="btn btn-lg btn-primary">Agendar cita nueva</a>
       </small>
     </div>
   </main>
